fix: mantine dark mode

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -4,8 +4,8 @@
 
 @layer base {
   body {
-    @apply text-zinc-800;
-    @apply fill-zinc-800;
+    @apply !text-zinc-800;
+    @apply !fill-zinc-800;
     font-family: var(--font-fans);
   }
 
